--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "README.md", title: "About Me"}
-  - {file: "index.html", title: "Projects"}
+  - {file: "README.md", title: "Projects"}
+  - {file: "/MiguelDantas_CV", title: "CV"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:migdantas99@gmail.com"}
