--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md", title: "Projects"}
-  - {file: "d/migueldantascv.pdf", title: "CV"}
+  - {file: "cv.md", title: "CV"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:migdantas99@gmail.com"}
